kubernetes/apps/dmhosted-blog/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dmhosted-blog
  labels:
    pod-security.kubernetes.io/enforce: restricted
