kubernetes/apps/dmhosted-blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dmhosted-blog
  namespace: dmhosted-blog
  labels:
    app: dmhosted-blog
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: dmhosted-blog
