kubernetes/apps/dmhosted-blog/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dmhosted-blog-ingressroute
  namespace: dmhosted-blog
  annotations:
    external-dns.alpha.kubernetes.io/provider: cloudflare
    external-dns.alpha.kubernetes.io/hostname: blog.dmhosted.com
    external-dns.alpha.kubernetes.io/target: b8f93036-6de6-4d1c-a590-bdbf64f990ad.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blog.dmhosted.com`)
      kind: Rule
      services:
        - name: dmhosted-blog
          port: 8080
  tls:
    secretName: dmhosted-blog-public-cert
